<package format="2">
  <name>rqt_cascade_hfsm</name>
  <version>1.1.0</version>
  <description>rqt_cascade_hfsm provides a GUI plugin for creating HFSMs using cascade lifecycle.</description>
  <maintainer email="fmrico@gmail.com">Francisco Martin</maintainer>

  <license>BSD</license>

  <author  email="fmrico@gmail.com">Francisco Martin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>qt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>qt_gui_cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
